gets user basic rest working
