# storage/api-docs/api-docs.json
@@ -126,6 +126,46 @@
                     }
                 ]
             }
+        },
+        "/api/users/v1/{id}": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get details on a specific User",
+                "operationId": "getUser",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the user to retrieve",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/User"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "User not found"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -236,42 +276,23 @@
                         "type": "integer",
                         "format": "int64"
                     },
-                    "title": {
+                    "name": {
                         "description": "",
                         "type": "string"
                     },
-                    "start_date": {
+                    "email": {
+                        "description": "",
+                        "type": "string"
+                    },
+                    "created_at": {
                         "description": "",
                         "type": "string",
                         "format": "date-time"
                     },
-                    "end_date": {
+                    "updated_at": {
                         "description": "",
                         "type": "string",
                         "format": "date-time"
-                    },
-                    "total_remittance": {
-                        "description": "",
-                        "type": "number",
-                        "format": "float"
-                    },
-                    "submitted": {
-                        "description": "",
-                        "type": "boolean"
-                    },
-                    "paid_by_check": {
-                        "description": "",
-                        "type": "boolean"
-                    },
-                    "payment_date": {
-                        "description": "",
-                        "type": "string",
-                        "format": "date"
-                    },
-                    "total": {
-                        "description": "",
-                        "type": "number",
-                        "format": "float"
                     }
                 },
                 "type": "object"
